--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,5 @@ project(Algorithm)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Algorithm main.cpp)
 
-add_executable(main main.cpp)
-add_executable(hdu1251 Template/字符串/字典树Trie/hdu1251.cpp)
+add_executable(main main.cpp 模板库/数据结构/ST表/CV_ST表（稀疏表）.cpp 模板库/数据结构/树状数组/CV_差分树状数组.cpp)
