--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,6 @@ project(Algorithm)
 set(CMAKE_CXX_STANDARD 17)
 
 
-add_executable(main main.cpp 模板库/数据结构/ST表/CV_ST表（稀疏表）.cpp 模板库/数据结构/树状数组/CV_差分树状数组.cpp)
+
+
+add_executable(main main.cpp 模板库/图论/存图/链式前向星.cpp)
